# ChangeLog for app-leechcraft/lc-azoth
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-leechcraft/lc-azoth/ChangeLog,v 1.23 2014/08/05 19:30:18 maksbotan Exp $

  05 Aug 2014; Maxim Koltsov <maksbotan@gentoo.org> lc-azoth-9999.ebuild,
  metadata.xml:
  Add sarin plugin to 9999. Thanks to 0xd34df00d

*lc-azoth-0.6.70 (03 Aug 2014)

  03 Aug 2014; Maxim Koltsov <maksbotan@gentoo.org> +lc-azoth-0.6.70.ebuild:
  Bump LeechCraft to 0.6.70, thanks to 0xd34df00d.

  16 Jun 2014; Maxim Koltsov <maksbotan@gentoo.org> lc-azoth-9999.ebuild:
  Remove p100q useflag from 9999 as plugin was removed upstream

  26 May 2014; Maxim Koltsov <maksbotan@gentoo.org> lc-azoth-9999.ebuild:
  Switch from qtmultimedia to qt-mobility[multimedia] in lc-azoth-9999, thanks
  to 0xd34df00d.

*lc-azoth-0.6.65 (10 Apr 2014)

  10 Apr 2014; Maxim Koltsov <maksbotan@gentoo.org> +lc-azoth-0.6.65.ebuild:
  Bump LeechCraft to 0.5.65, thanks to 0xd34df00d.

  03 Apr 2014; Mikle Kolyada <zlogene@gentoo.org> lc-azoth-0.6.60.ebuild:
  x86 stable wrt bug #500914

  02 Apr 2014; Mikle Kolyada <zlogene@gentoo.org> lc-azoth-0.6.60.ebuild:
  amd64 stable wrt bug #500914

  29 Jan 2014; Maxim Koltsov <maksbotan@gentoo.org> lc-azoth-9999.ebuild:
  Update spell dependency after app-leechcraft/lc-rosenthal addition

*lc-azoth-0.6.60 (08 Jan 2014)

  08 Jan 2014; Maxim Koltsov <maksbotan@gentoo.org> +lc-azoth-0.6.60.ebuild:
  Bump to LeecChraft-0.6.60 release, thanks to 0xd34df00d.

  25 Sep 2013; Sergey Popov <pinkbyte@gentoo.org> lc-azoth-9999.ebuild,
  metadata.xml:
  Add USE-flag and dependency for Twitter plugin, minor dependency corrections,
  thanks to 0xd34df00d

  24 Sep 2013; Maxim Koltsov <maksbotan@gentoo.org> lc-azoth-0.5.90.ebuild,
  lc-azoth-0.5.99.ebuild, lc-azoth-0.6.0.ebuild, lc-azoth-9999.ebuild:
  Fix double qtmultimedia dependency, add qjson dependency

*lc-azoth-0.6.0 (24 Sep 2013)
