@@ -6,18 +6,18 @@ DIST leechcraft-0.6.65.tar.xz 5067580 SHA256 b821fb8716b3ba04862bbb358a738609ead
 DIST leechcraft-0.6.70.tar.xz 5204940 SHA256 3e7f51da0b7eec6df11471ada409d752754f3badc388b8f0adab3f056fabcd45 SHA512 fedf0467e39bd512c937b25f5da62af2be7908831169e1d82d10af43b7c164be2658138663578d7658c3692d5269dd3df9e391744561443f49771edd063ba408 WHIRLPOOL a0aef0bdc11d4b3a3680a055671208db0528bb4744930a0fecab6d1fbf99cc87f4fd8483e98e93357a4c0dda1f3edc1a20a9a725b28ea9003c564469531a2d37
 EBUILD lc-azoth-0.6.60.ebuild 3559 SHA256 681a10a0757f50de640c33fb7411b5476a490fbc302d15e220fa77e3b6036aab SHA512 38b5f8c1fef7687254b7ae0017ca3e00859369e93388c0c437842a81ca4a80d9b0cfc46700bca52ef4c2bb8d8ec18907ac26f7004944c7f9efc4720f7f0e47ba WHIRLPOOL ab4919e43432ef536823fa98de37e1dd64d07d137f874b2696e1448202a91bd4ce2d825f1c99d82345f21e85ce4bd11fafe0d1e653def25a11a6e381c28a8c9b
 EBUILD lc-azoth-0.6.65.ebuild 3576 SHA256 f6e4392043e75750e169085d04b09ffc39b8f48c0675b6a3a2a0a00df0c25dfa SHA512 c8067a9bd4cddf0d7a6fd623c3b41d6579c474e11b6b49cf0c2486b51f75001072e7db51c73b71f41d14fa6be56494433f2c4dc1c2a8cbb5f504dae3068f079d WHIRLPOOL 06d8d9ba13b47d0ab42c09b72f200e81f07ab4d079c623bdd2008be05d3c9b2b8f427c93f2ee9e650c921182ab9eccda37a393a359201fc3c9962d310cd8ed53
-EBUILD lc-azoth-0.6.70.ebuild 3532 SHA256 25de564b7765e689294adecc8eb1307e8866deb3d6a2123ba1f195aada398b85 SHA512 6e827fd76191a103e2704e3d55f49ea206c25595e25cf3aaeaed034f7d32bde5829e731a02819495816d51435ade101926419b5142e830bffeb69ca73d93aeff WHIRLPOOL 1531499f980733b63241d8b27f75b571dc0ec5b07c62b97e780b50ee8f69f0270a154ecb601a0e33e19dbde5e0dab873ff681ab839b1dfd49e205066ed7d8459
-EBUILD lc-azoth-9999.ebuild 3594 SHA256 8cda8a4f4ca956f4d3875f13bd8d21e56577a9ccdc4c937f0f4095b4fe16fd83 SHA512 d4659aa0e640861864308657ce08596ef988a47356f8752d7160d558678362dd3937246504bbe058d92c2e1b968e7179ff88e81fc2358f841b6f24db1f52d64b WHIRLPOOL 388ae87422f60b37bdd5f66eabe9bd77a6bdcfc60d1af688fe19fb8a79d1e0a6d803ff1a150d8d168b5ac9175a93abadd8921bef8e60f584a9d332eb233deebf
-MISC ChangeLog 11218 SHA256 f2cdbf3e257b0701e9fbf28af35fe83340da53928d4f75ee256650ebc93683d3 SHA512 661e887fd7b08edd8bf943a2d99ee2edc5f618e4bf0d57762f748f81b7fece29b9fbedca364d5d9ec60cd68e5a26fcef5de2dfb6d7b7c3a79ca2e40ef725332c WHIRLPOOL fbd73ef2f576e5050d898fd7521ee71a0a565d804875aa9e5ec5875b119f2a9a50400614c62442352f3cb5ed04c22f74f90331372c7684cc2073721980b0f58a
-MISC metadata.xml 2515 SHA256 ab0f00e41a4d226f63c4b8ebc512f9e236e64e33f218ed7b9fd8ed0e087255ed SHA512 a8a29f55a6345eccc48943d2c6f1584b4e650f98823738138efe95d29e530bca131ad31c06ece681df12ed12705371451dba3c64fa728a7f6ad878de46d5f57b WHIRLPOOL 84a89ceeef39204a04aaed52639a59070d80e62e5c68e98628c5f4f8f5e654093197ee5906262bfa39e73c411b3cc337e4d5a4d35c92f26334910a25cf95ff13
+EBUILD lc-azoth-0.6.70.ebuild 3599 SHA256 dbdc2cd72a87e0d3484eae84c57a2f7406f2b8317aa5899d3c1fb72f2247780b SHA512 253b41419ec105db244bec807a2ba73e4df58e71ec44303d18354b6ff758d536b3098ff839989f3f4598fa77f6019f9969d3f225df4a1e97b0a0abc2393048a8 WHIRLPOOL 2ae5842366dbfefdd9d1c4f71065e97dff54b64ff92aafa37c32261acd7ef17a7ea648174573e09fbe8f85b36d099bdde634fd64b7b3df4bb9debf7cd857f258
+EBUILD lc-azoth-9999.ebuild 3661 SHA256 a479a5e191284ac9eca4b706ab040200a8278083dbf0bb69d3ef8eb41ffbe8b0 SHA512 b95fd8770935d4df892de83f8abba2d9adb4f584ed5479aff93c62cd4abe913f28c1cb3dfd4faef6a00be95d3e1b73f00a555666caf48782f5e4a8ec9b3e9e0c WHIRLPOOL 6a112a13a5a922d9f163df98213b7ddc1d3c4179b43a707a0d845a8d1faa2e45dfd4f6603d2b20d78c570b99bd5fb45ae6e686ffc33f4658f293aae9dac222b3
+MISC ChangeLog 11388 SHA256 bcffe75862e7b1d14937131df88b7cbd5d3aeeba704cd779be670ef9794de079 SHA512 2c4612a1dc65043cce8fafd8436c747ee8d3e6bf8189e5cf3d864a86654c5a1dc4cf0d13037a43181abd8883e8c7cd702391b76d7d99f88cda9f9da15b0c40ea WHIRLPOOL f5e5cfbcdb96887dd50979d3e6894cb6c57023ba15a98f7ca0dc44fe5a067d6553e55be5b2b892b8aa12cebb7073f7cda1256dee33bc168fb325effedd34a17d
+MISC metadata.xml 2597 SHA256 cead907f3a7b17d527712ea6d55452742dcfc9442f551e281c1d286c3ef2dc8b SHA512 44a70e9683c48f03b1b2160a3117e929906cf72001144cfc188ae5e71948b48ec09c76ea981042bacc4500bbd37a8a7cdda6eea3957130c4bdc5aa61b9e62904 WHIRLPOOL 0fad27242ea201291c9ee4ce2faebde5a73cc7550e6551d7a2010a76a730513e0b61219c038ee0c8991c27a3a9f423e169c5309769cd0c21262448b2d3610265
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJT4TDHAAoJEAmJmMX429reoEgH/AgnuPW72z3GFL6fx1MbpWIX
-R9GMedZmUxpDVTG3O1ZIbF6hKM3iGRtkf2WHKNUcKxLgunR39NE4bIbL0aJ5lIrG
-MvMtV2P6ElOUJ10q6sN3ia/h5rAVyl0aav6ZRlcRkVhadtF5AxSzD2pZZMkHV/sq
-nsqJGQ/vM+bQaSCRz2qZFjB11rP8a28GHSJnsht/9uX8H5bewkP/pREK9rO0uMWN
-MJeQqESApXbGcvW5+UH8fFG6LaZ+VzkVxO3Iabv1FF3CWKjUfAl/VjcVwmstpizh
-EuRKWQDxCzg13dW3YiY1RzeTBXE4C5Ctx3wXZNNsGufIsEG0n8dNffei5h0gA3I=
-=8Yov
+iQEcBAEBCAAGBQJUg0fUAAoJEAmJmMX429rem04H/jF39Y2hVCTeWw8/8PW/4rYf
+X62aaeDIrVuOI3z3upy3bEP1pYsr83ed3arcGyN7nXpNA3Ph0Qd+ttkS1iN7OT4G
+DfqqfmFCDBUradwBPDxLPHRk35OvOVc7jWvK7fTsiFZfX9ViNY7s4pMIF1JfdT5d
+8sKrik+B0GNkjjVQ+6SVQm7CRlS9pxXW1OO0NSoOgNvv+Ws7m2ZBQDVZoQhbhsNd
+86Vi3NMdrMGrxv4niwNSIKx5NLDuQiMvSy2Xw7naKMGP3WLtz0/cJi6PG1cCQH8n
+DfVWuiOoAc94izgjMNTcj0caopTjx9nZXJZmza+Jc97vTKANJCZwZd8U7ryNS/I=
+=w9Hc
 -----END PGP SIGNATURE-----
