@@ -3,10 +3,10 @@ DEPEND=~app-leechcraft/lc-core-9999 dev-libs/qjson dev-qt/qtwebkit:4 autoidler? 
 DESCRIPTION=Azoth, the modular IM client for LeechCraft
 EAPI=5
 HOMEPAGE=http://leechcraft.org/
-IUSE=debug doc astrality +acetamide +adiumstyles +autoidler +autopaste +birthdaynotifier +chathistory +crypt +depester +embedmedia +herbicide +hili +isterique +juick +keeso +lastseen +metacontacts media +msn +murm +latex +nativeemoticons +otroid +spell sarin shx +standardstyles +vader +woodpecker +xmpp +xtazy
+IUSE=debug doc astrality +acetamide +adiumstyles +autoidler +autopaste +birthdaynotifier +chathistory +crypt +depester +embedmedia +herbicide +hili +isterique +juick +keeso +lastseen +metacontacts media +msn +murm +latex +nativeemoticons +otroid +spell sarin shx +standardstyles +vader velvetbird +woodpecker +xmpp +xtazy
 LICENSE=Boost-1.0
 RDEPEND=~app-leechcraft/lc-core-9999 dev-libs/qjson dev-qt/qtwebkit:4 autoidler? ( x11-libs/libXScrnSaver ) astrality? ( net-libs/telepathy-qt ) otroid? ( net-libs/libotr ) media? ( dev-qt/qt-mobility[multimedia] ) msn? ( net-libs/libmsn ) woodpecker? ( dev-libs/kqoauth ) xmpp? ( =net-libs/qxmpp-9999 media? ( =net-libs/qxmpp-9999[speex] ) ) xtazy? ( ~app-leechcraft/lc-xtazy-9999 dev-qt/qtdbus:4 ) crypt? ( app-crypt/qca app-crypt/qca-gnupg ) sarin? ( net-libs/tox ) astrality? ( net-im/telepathy-mission-control net-voip/telepathy-haze ) latex? ( || ( media-gfx/imagemagick media-gfx/graphicsmagick[imagemagick] ) virtual/latex-base ) spell? ( app-leechcraft/lc-rosenthal )
 REQUIRED_USE=|| ( standardstyles adiumstyles )
 SLOT=0
 _eclasses_=cmake-utils	e2cc76ea65ae78da8e4696dad93f5d29	eutils	6faef4c127028ccbba3a11400d24ae34	flag-o-matic	eda1c0b5ba85b3eeb555a071d69eb819	git-2	e28f0d8a9b321431b1e699782851b827	leechcraft	6609acc541f2bc8ba65e461352fdf169	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=47876424c0339e71136e31142cb8d0a8
+_md5_=3e7a97920acb9897cb64ae2e60bcfd0c
