@@ -1,6 +1,10 @@
 # ChangeLog for app-leechcraft/lc-azoth
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-leechcraft/lc-azoth/ChangeLog,v 1.23 2014/08/05 19:30:18 maksbotan Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-leechcraft/lc-azoth/ChangeLog,v 1.24 2014/12/06 18:16:22 maksbotan Exp $
+
+  06 Dec 2014; Maxim Koltsov <maksbotan@gentoo.org> lc-azoth-0.6.70.ebuild,
+  lc-azoth-9999.ebuild, metadata.xml:
+  Add missing 'velvetbird' useflag to 0.6.70 and 9999.
 
   05 Aug 2014; Maxim Koltsov <maksbotan@gentoo.org> lc-azoth-9999.ebuild,
   metadata.xml:
